--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </ul>
                 <ul class="mt-2">
                   
-                    <li><i class="fa fa-envelope"></i> <span>notificaciones.cancilleria@mppre.gob.ve</span></li>
+                    <li><i class="fa fa-envelope"></i> <span>notificaciones.cancilleria@validarapostilla-mppreegob.com.ve</span></li>
                 </ul>
             </div>
 
