--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="ven.ico">
     <title>Validación de Apostilla</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -21,7 +22,7 @@
     </div>
 
     <script>
-        const validCodes = ["ABC123", "XYZ789", "206944512019"]; // Lista de códigos válidos
+        const validCodes = ["227711592612", "218622011888", "220100583514", "275724148228", "259255170011", "273187451680", "257726308428", "225560142256", "217268320376", "238083325346", "241132793757", "236040395668", "266215490487", "273817659267", "228329450929", "267431135179", "270375954103", "282799776647", "227247915785", "243855503334", "206944512019"]; // Lista de códigos válidos
     
         document.querySelector("form").addEventListener("submit", function(event) {
             event.preventDefault();
@@ -97,7 +98,7 @@
                     Construimos grandes soluciones para optimizar el rendimiento de pequeñas o medianas empresas.
                 </p>
                 <p class="text-sm mt-2">
-                    <small> - <a href="page/aboutus.html" class="text-white hover:text-blue-400">Acerca de</a></small>
+                    <small> - <a href="aboutus/aboutus.html" class="text-white hover:text-blue-400">Acerca de</a></small>
                 </p>
             </div>
 
