--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="w-full md:w-1/3 mb-4">
                 <h4 class="font-semibold text-lg mb-2">Contacte con nosotros</h4>
                 <ul>
-                    <li><a href="page/contactus" class="text-white hover:text-blue-400">Contáctenos</a></li>
+                    <li><a href="contactus.html" class="text-white hover:text-blue-400">Contáctenos</a></li>
                 </ul>
                 <ul class="mt-2">
                   
@@ -98,7 +98,7 @@
                     Construimos grandes soluciones para optimizar el rendimiento de pequeñas o medianas empresas.
                 </p>
                 <p class="text-sm mt-2">
-                    <small> - <a href="aboutus/aboutus.html" class="text-white hover:text-blue-400">Acerca de</a></small>
+                    <small> - <a href="aboutus.html" class="text-white hover:text-blue-400">Acerca de</a></small>
                 </p>
             </div>
 
